--- a/templates/index.html
+++ b/templates/index.html
@@ -77,3 +77,5 @@
 <li>Omnis iusto, minima accusamus. Fugit.</li>
 <li>Nesciunt consectetur in similique quae.</li>
 {% endblock %}
+{% block footer %}
+{% endblock %}
