--- a/static/css/main.css
+++ b/static/css/main.css
@@ -157,3 +157,13 @@ header {
     bottom: 0;
     width: 100%;
 }
+
+.flash {padding: 10px}
+.flash.success {
+	border: 1px solid #21DB56;
+	background: #AEFFC5;
+}
+.flash.error {
+	border: 1px solid #FF4343;
+	background: #FF9C9C;
+}
